[tool.poetry]
name = "nav-sim-modules"
version = "0.1.1"
description = ""
authors = ["Reona Sato <www.shinderu.www@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
randoor = "^0.1.4.1"
numpy = "^1.21.4"
nav-components = "^0.1.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.5.0"
descartes = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
